--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,6 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_subdirectory(external)
 add_subdirectory(src)
+
+# Copy assets to build folder.
 file(COPY src/assets DESTINATION "${CMAKE_CURRENT_BINARY_DIR}/src")
