--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,10 +2,18 @@ add_executable(${PROJECT_NAME})
 target_sources(${PROJECT_NAME} PRIVATE main.cpp)
 
 add_subdirectory(game)
-target_link_directories(${PROJECT_NAME} PRIVATE external PRIVATE game)
+add_subdirectory(textureManager)
+
+target_link_directories(${PROJECT_NAME} 
+    PRIVATE external 
+    PRIVATE game
+    PRIVATE textureManager
+)
+
 
 target_link_libraries(${PROJECT_NAME} 
     PRIVATE external 
     PRIVATE game
+    PRIVATE textureManager
 )
 
