--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -1,6 +1,8 @@
 add_library(game
     Game.cpp
     Game.h
+    TextureManager.h 
+    TextureManager.cpp
 )
 
 target_link_libraries(game external)
