--- a/src/game/CMakeLists.txt
+++ b/src/game/CMakeLists.txt
@@ -3,6 +3,8 @@ add_library(game
     Game.h
     TextureManager.h 
     TextureManager.cpp
+    GameObject.h
+    GameObject.cpp
 )
 
 target_link_libraries(game external)
