--- a/src/game/ECS/CMakeLists.txt
+++ b/src/game/ECS/CMakeLists.txt
@@ -2,5 +2,8 @@ add_library(ecs
     ECS.h
     PositionComponent.h 
     PositionComponent.cpp
+    SpriteComponent.h 
+    SpriteComponent.cpp
 )
 
+target_link_libraries(ecs external)
